-------------------------
 Image+ TV type changelog
-------------------------

# v2.2
--------
 :: Added Czech translation (@TheBoxer)
 :: Added Danish translation (@Flygenring)
 :: Added German translation (@KristianP)
 :: Added Spanish translation (Nico Telfer)
 :: Added French translation (@rtripault)
 :: Added Hungarian translation (Kristof Kotai)
 :: Added Italian translation (@tillilab)
 :: Added Dutch translation (@Mark-H)
 :: Added Russian translation (@Alroniks)g

# v2.1
--------
 :: Fixed bug with non-default media sources
 :: Added field for additional phpThumb parameters to output renderer
 :: Added option to specify a chunk for output formatting (fields: url,alt,width,height)

# v2.0
-------
Complete rewrite